widened dead zone for detecting position of paddle. Background now scrolls left and right only when paddle is at extremes of screen. Removed wrapper div of canvas. fixed misalignment with mouse pointer and paddle position. (sort of)

--- a/style.css
+++ b/style.css
@@ -1,9 +1,6 @@
-* {padding: 0;
-    margin: 20;
- }
-
 canvas {
     display: block;
     margin: 0 auto; 
+    margin-top: 40;
     margin-left: auto; 
 }
